# energy-swap

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format  release-notes.md
.ai/: class_refactor_prompt.txt
.github/: copilot-instructions.md  git-commit-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: linux-release.yml  macos-release.yml  pages.yml  windows-release.yml
media/font/: PixeloidSans_16.bmfc
media/menu/: menu.ftpp
media/sprites/: Pixelart arrow icon pack 1.aseprite  Sprite-0001.aseprite  sprites.ftpp
resources/about/: about.txt
resources/fonts/: PixeloidSans_16.fnt
resources/levels/: classic.json  cosmic.json  levels.txt
resources/license/: license.txt
resources/shaders/: crt.fs  crt.vs
resources/sprites/: menu.json  sprites.json
resources/version/: version.json
scripts/: version.py
src/: app.cpp  app.h  app.hpp  main.cpp  result.hpp
src/components/: component.hpp  version_display.cpp  version_display.hpp
src/energy/: energy_swap.cpp  energy_swap.hpp  level_manager.cpp  level_manager.hpp  main.cpp
src/energy/components/: battery_display.cpp  battery_display.hpp  points.cpp  points.hpp  spark.cpp  spark.hpp
src/energy/data/: battery.cpp  battery.hpp  puzzle.cpp  puzzle.hpp
src/energy/scenes/: cosmic.cpp  cosmic.hpp  game.cpp  game.hpp  hud.cpp  hud.hpp  level_selection.cpp  level_selection.hpp  license.cpp  license.hpp  menu.cpp  menu.hpp  mode.cpp  mode.hpp
src/engine/: app.cpp  app.hpp  events.hpp  raygui.cpp  result.hpp
src/engine/components/: button.cpp  button.hpp  component.cpp  component.hpp  label.cpp  label.hpp  quick_bar.cpp  quick_bar.hpp  scroll_text.cpp  scroll_text.hpp  sprite.cpp  sprite.hpp  sprite_anim.cpp  sprite_anim.hpp  ui_component.cpp  ui_component.hpp  version_display.cpp  version_display.hpp
src/engine/render/: sprite_sheet.cpp  sprite_sheet.hpp  sprites.cpp  texture.cpp  texture.hpp
src/engine/scenes/: game_overlay.cpp  game_overlay.hpp  scene.cpp  scene.hpp
src/platform/: win32_winmain.cpp
src/res/: energy-swap.rc  energy-swap.rc.in
src/web/: template.html
